--- a/components/footer.html
+++ b/components/footer.html
@@ -26,18 +26,16 @@
 
       <div class="footer-col">
         <h4>Explore</h4>
-        <a href="/pages/tools/tools.html">Free Tools</a>
+        <a href="/pages/tools/tools.html">Tools</a>
         <a href="/pages/blog/blog.html">Blog</a>
         <a href="/pages/product/product.html">Services</a>
-        <a href="/pages/about/about.html">About</a>
         <a href="/index.html">Home</a>
       </div>
 
       <div class="footer-col">
         <h4>Business</h4>
-        <a href="/affiliate/">Affiliate Program</a>
-        <a href="/pricing/">Pricing</a>
-        <a href="/pages/contact/contact.html">Contact</a>
+        <a href="/pages/about/about.html">About</a>
+        <a href="/pages/contact/contact.html">Contact us</a>
       </div>
 
       <div class="footer-col">
