--- a/components/header.html
+++ b/components/header.html
@@ -22,7 +22,7 @@
       <a href="/pages/tools/tools.html">Tools</a>
       <a href="/pages/product/product.html">Services</a>
       <a href="/pages/about/about.html">About</a>
-      <a href="/pages/contact/contact.html">Contact</a>
+      <a href="/pages/contact/contact.html">Contactc</a>
     </nav>
 
     <!-- Mobile Toggle -->
@@ -39,6 +39,6 @@
     <a href="/pages/tools/tools.html">Tools</a>
     <a href="/pages/product/product.html">Services</a>
     <a href="/pages/about/about.html">About</a>
-    <a href="/pages/contact/contact.html">Contact</a>
+    <a href="/pages/contact/contact.html">Contact us</a>
   </nav>
 </header>
